Alteração de texto

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 
                 <div class="card">
                     <h4>Kit 3 (15 pessoas)</h4>
-                    <p>1 Bolo 1,8kg<br>30 Docinhos<br>1/2 Torta Salgada<br>30 Mini Pizzas<br>80 Salgadinhos</p>
+                    <p>1 Bolo 1,8kg<br>30 Docinhos<br>1 Torta Salgada<br>30 Mini Pizzas<br>80 Salgadinhos</p>
                     <div class="price">R$ 275,00</div>
                 </div>
 
@@ -680,3 +680,4 @@
 
 </body>
 </html>
+
